--- a/public/index.css
+++ b/public/index.css
@@ -689,7 +689,7 @@ img {
 
 .footer {
   position: relative;
-  background-color: #eeeeee;
+  background-color: #f2f2f2;
   width: 100%;
   padding-left: var(--space-3);
   padding-right: var(--space-3);
