--- a/src/pug/blocks/navbar-header.pug
+++ b/src/pug/blocks/navbar-header.pug
@@ -1,5 +1,5 @@
 .navbar-header#navbar-header
-    a(href="" class="container-logo")
+    a(href="/" class="container-logo")
         include ../blocks/logo.pug
     .navbar-header__second
         .navbar__actions
@@ -11,7 +11,7 @@
                 .hamburguer__div-center#hamburguer__div-center
         .navbar__links#navbar__links
             a(href="/" class="navbar__link animated-border" id="inicio" ) Inicio
-            a(href="/catalogo.html" class="navbar__link animated-border" id="catalogo") Catalogo
+            //- a(href="/catalogo.html" class="navbar__link animated-border" id="catalogo") Catalogo
             a(href="/tiendas.html" class="navbar__link animated-border" id="tiendas") Tiendas
 
             //- a(href="" class="navbar__link animated-border " ) WhatsApp
