--- a/src/pug/pages/tiendas.pug
+++ b/src/pug/pages/tiendas.pug
@@ -17,24 +17,24 @@ block main
             a(class="mybtn mybtn--outlined" href=`${whatsapp} Quiero ir a las tiendas` target="blank") Quiero ir a las tiendas
     section.stores
         .store
-            .store__map
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             h4.h4 Fashion
-            .store__text
-                p.store__p.p-semibold Carrera 8 #15-52
-                a( class="mybtn mybtn--outlined" href="") WhatsApp de la tienda
-        .store
             .store__map
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            .store__text
+                p.store__p.p-semibold Carrera 8 #15-52
+                a( class="mybtn mybtn--outlined" href="https://wa.me/+573176353645?text=" target="blank") WhatsApp de la tienda
+        .store
             h4.h4 Tiendas
-            .store__text
-                p.store__p.p-semibold Carrera 8 #15-52
-                a( class="mybtn mybtn--outlined" href="") WhatsApp de la tienda
-        .store
             .store__map
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            h4.h4 New
             .store__text
-                p.store__p.p-semibold Carrera 8 #15-52
-                a( class="mybtn mybtn--outlined" href="") WhatsApp de la tienda
+                p.store__p.p-semibold Calle 17 #9-32
+                a( class="mybtn mybtn--outlined" href="https://wa.me/+573176445734?text=" target="blank") WhatsApp de la tienda
+        .store
+            h4.h4 New
+            .store__map
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7951.583884595019!2d-75.69769405528757!3d4.805749771826099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388748778338f9%3A0xdeb9da33110ca5c0!2sExtrene!5e0!3m2!1ses-419!2sco!4v1695340441570!5m2!1ses-419!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            .store__text
+                p.store__p.p-semibold Calle 17 # 9-56
+                a( class="mybtn mybtn--outlined" href="https://wa.me/+573176612022?text=" target="blank") WhatsApp de la tienda
         
