--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -33,9 +33,13 @@ html(lang="es")
     body.body#body
 
         -const whatsapp = "https://wa.me/+573244117596?text="
-        -const facebook = "facebook"
-        -const instagram = "@juan.gomez_barber"
-        -const correo = "correo@correo.com"
+
+        //- TODO Producto 
+        -let precio = "00.000"
+        -let imagen1 = "https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600"
+        -let imagen2 = "https://cdn.shopify.com/s/files/1/0650/0188/1847/files/Camiseta_regular_comic_bart_brkl.jpg?v=1694713008&width=600"
+        -let nombre = "Camiseta Básica"
+
 
         header.header
             include ../blocks/navbar-header.pug
