--- a/public/tiendas.css
+++ b/public/tiendas.css
@@ -689,7 +689,7 @@ img {
 
 .footer {
   position: relative;
-  background-color: #eeeeee;
+  background-color: #f2f2f2;
   width: 100%;
   padding-left: var(--space-3);
   padding-right: var(--space-3);
@@ -902,6 +902,12 @@ body .main .stores {
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 10rem;
+  flex-direction: column;
+}
+@media (orientation: landscape) {
+  body .main .stores {
+    flex-direction: row;
+  }
 }
 body .main .stores .store {
   flex: 1;
@@ -917,11 +923,16 @@ body .main .stores .store .store__map {
   overflow: hidden;
 }
 body .main .stores .store .store__map iframe {
-  height: 100%;
-  height: 500px;
+  height: 300px;
   width: 100%;
 }
+@media (orientation: landscape) {
+  body .main .stores .store .store__map iframe {
+    height: 500px;
+  }
+}
 body .main .stores .store .store__text {
+  flex-wrap: wrap;
   height: 100%;
   flex: 1;
   width: 100%;
