--- a/src/scss/scss pages/tiendas.scss
+++ b/src/scss/scss pages/tiendas.scss
@@ -74,6 +74,11 @@ body {
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 10rem;
+        flex-direction: column;
+        @include landscape {
+            flex-direction: row
+        }
+
         .store{
             @extend .flex-center, .flex-column;
             flex: 1;
@@ -87,13 +92,16 @@ body {
                 width: 100%;
                 overflow: hidden;
                 iframe{
-                    height: 100%;
-                    height: 500px;
-                    width: 100%
+                    height: 300px;
+                    width: 100%;
+                    @include landscape {
+                        height: 500px;
+                    }
                 }
             }
             .store__text{
                 @extend .flex-center;
+                flex-wrap: wrap;
                 height: 100%;
                 flex: 1;
                 width: 100%;
