--- a/public/index.css
+++ b/public/index.css
@@ -834,6 +834,132 @@ img {
   transform: translateY(100%);
 }
 
+.products {
+  margin-top: var(--space-10);
+  -moz-column-gap: var(--space-2);
+       column-gap: var(--space-2);
+  row-gap: var(--space-5);
+  max-width: 100%;
+  display: grid;
+  overflow: hidden;
+  grid-template-columns: repeat(2, minmax(150px, 300px));
+  justify-content: center;
+}
+@media screen and (min-width: 558px) {
+  .products {
+    grid-template-columns: repeat(3, minmax(150px, 300px));
+  }
+}
+@media screen and (min-width: 758px) {
+  .products {
+    grid-template-columns: repeat(3, minmax(150px, 300px));
+  }
+}
+@media screen and (min-width: 1014px) {
+  .products {
+    grid-template-columns: repeat(4, minmax(150px, 300px));
+  }
+}
+@media screen and (min-width: 1356px) {
+  .products {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    margin-left: var(--space-8);
+    margin-right: var(--space-8);
+  }
+}
+.products .product {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: var(--space-3);
+  overflow: hidden;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+.products .product .product-slider {
+  aspect-ratio: 3/4;
+  width: 100%;
+  flex: 1;
+  border: 1px solid green;
+}
+.products .product .product-slider .product__btn {
+  display: none;
+}
+@media screen and (min-width: 1014px) {
+  .products .product .product-slider .product__btn {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    z-index: 10;
+    background-color: var(--color-white);
+    color: var(--color-text);
+    opacity: 0;
+    transition: opacity 0.3 ease;
+    display: inline;
+  }
+  .products .product .product-slider .product__btn:hover {
+    text-decoration: underline;
+  }
+}
+.products .product .product-slider .product-slider__slides {
+  border: 1px solid red;
+  cursor: pointer;
+}
+.products .product .product-slider .product-slider__slides .product-slider__slide .product-slider__img {
+  transition: transform 0.5s ease-out;
+  height: 100%;
+  min-width: 100%;
+  border: 1px solid blue;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.products .product .product-slider .product-slider__btns .swiper-button-prev {
+  transform: scaleX(-1);
+  left: -8px;
+}
+.products .product .product-slider .product-slider__btns .swiper-button-next {
+  right: -8px;
+}
+.products .product .product-slider .product-slider__btns div {
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0;
+  width: 48px;
+  overflow: hidden;
+}
+.products .product .product-slider .product-slider__btns svg {
+  height: auto;
+  width: 32px;
+  fill: var(--color-primary-500);
+}
+.products .product .product__text {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-1);
+}
+.products .product .product__text .product__title,
+.products .product .product__text span {
+  font-size: 14px;
+}
+@media screen and (min-width: 1014px) {
+  .products .product .product__text .product__title,
+  .products .product .product__text span {
+    font-size: 16px;
+  }
+}
+@media (hover: hover) {
+  .products .product:hover .product-slider__img {
+    transform: scale(1.05);
+  }
+  .products .product:hover .product__btn {
+    opacity: 1;
+  }
+}
+.products .product:active .product__btn {
+  opacity: 1;
+}
+
 body {
   position: relative;
 }
@@ -1053,128 +1179,6 @@ body .main .section-3 .payment__p .payment__btn:hover {
   padding-right: var(--space-1);
   padding-top: var(--space-10);
   padding-bottom: var(--space-15);
-  overflow: hidden;
-}
-.section-new .products {
-  margin-top: var(--space-10);
-  -moz-column-gap: var(--space-2);
-       column-gap: var(--space-2);
-  row-gap: var(--space-5);
-  max-width: 100%;
-  display: grid;
-  overflow: hidden;
-  grid-template-columns: repeat(2, minmax(150px, 300px));
-  justify-content: center;
-}
-@media screen and (min-width: 558px) {
-  .section-new .products {
-    grid-template-columns: repeat(3, minmax(150px, 300px));
-  }
-}
-@media screen and (min-width: 758px) {
-  .section-new .products {
-    grid-template-columns: repeat(3, minmax(150px, 300px));
-  }
-}
-@media screen and (min-width: 1014px) {
-  .section-new .products {
-    grid-template-columns: repeat(4, minmax(150px, 300px));
-  }
-}
-@media screen and (min-width: 1356px) {
-  .section-new .products {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    margin-left: var(--space-8);
-    margin-right: var(--space-8);
-  }
-}
-.section-new .products .product {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  gap: var(--space-3);
-  overflow: hidden;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
-.section-new .products .product .product-slider {
-  aspect-ratio: 3/4;
-  width: 100%;
-  flex: 1;
-}
-.section-new .products .product .product-slider .product__btn {
-  display: none;
-}
-@media screen and (min-width: 1014px) {
-  .section-new .products .product .product-slider .product__btn {
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    z-index: 10;
-    background-color: var(--color-white);
-    color: var(--color-text);
-    opacity: 0;
-    transition: opacity 0.3 ease;
-    display: inline;
-  }
-  .section-new .products .product .product-slider .product__btn:hover {
-    text-decoration: underline;
-  }
-}
-.section-new .products .product .product-slider .product-slider__slides {
-  cursor: pointer;
-}
-.section-new .products .product .product-slider .product-slider__slides .product-slider__slide {
-  overflow: hidden;
-}
-.section-new .products .product .product-slider .product-slider__slides .product-slider__slide .product-slider__img {
-  transition: transform 0.5s ease-out;
-}
-.section-new .products .product .product-slider .product-slider__btns .swiper-button-prev {
-  transform: scaleX(-1);
-  left: -8px;
-}
-.section-new .products .product .product-slider .product-slider__btns .swiper-button-next {
-  right: -8px;
-}
-.section-new .products .product .product-slider .product-slider__btns div {
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 0;
-  width: 48px;
-  overflow: hidden;
-}
-.section-new .products .product .product-slider .product-slider__btns svg {
-  height: auto;
-  width: 32px;
-  fill: var(--color-primary-500);
-}
-.section-new .products .product .product__text {
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-1);
-}
-.section-new .products .product .product__text .product__title,
-.section-new .products .product .product__text span {
-  font-size: 14px;
-}
-@media screen and (min-width: 1014px) {
-  .section-new .products .product .product__text .product__title,
-  .section-new .products .product .product__text span {
-    font-size: 16px;
-  }
-}
-@media (hover: hover) {
-  .section-new .products .product:hover .product-slider__img {
-    transform: scale(1.05);
-  }
-  .section-new .products .product:hover .product__btn {
-    opacity: 1;
-  }
-}
-.section-new .products .product:active .product__btn {
-  opacity: 1;
 }
 
 .section-4 {
