--- a/src/pug/products/product-1.pug
+++ b/src/pug/products/product-1.pug
@@ -1,4 +1,4 @@
-- imagen1 = "https://brklbrooklyn.com/cdn/shop/files/Camiseta_regular_comic_bart_brkl_brooklyn.jpg?v=1694713008&width=600"
+- imagen1 = "/img/products/camisetas-basicas/RZ1009-FRENTE.webp"
 - imagen2 = "https://cdn.shopify.com/s/files/1/0650/0188/1847/files/Camiseta_regular_comic_bart_brkl.jpg?v=1694713008&width=600"
 - nombre = "Camiseta Básica"
 - precio = "100.000"
