--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -56,8 +56,8 @@ block main
         .products
             
             include ../products/product-1.pug
-            include ../products/product-2.pug
-            include ../products/product-3.pug
+            //- include ../products/product-2.pug
+            //- include ../products/product-3.pug
             //- include ../products/product.pug
             //- include ../products/product.pug
             //- include ../products/product.pug
