--- a/src/pug/products/product-1.pug
+++ b/src/pug/products/product-1.pug
@@ -1,6 +1,82 @@
-- imagen1 = "/img/products/camisetas-basicas/RZ1009-FRENTE.webp"
-- imagen2 = "https://cdn.shopify.com/s/files/1/0650/0188/1847/files/Camiseta_regular_comic_bart_brkl.jpg?v=1694713008&width=600"
-- nombre = "Camiseta Básica"
-- precio = "100.000"
+- precio = "65.000"
 
+
+- imagen2 = "img/products/camisetas-basicas/RZ1009-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1009-ATRAS.webp"
+- nombre = "Start Wars Happy"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1033-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1033-ATRAS.webp"
+- nombre = "One Piece Sketch"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1034-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1034-ATRAS.webp"
+- nombre = "Bart Prisión"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1041-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1041-ATRAS.webp"
+- nombre = "Bart Motocicleta"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1042-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1042-ATRAS.webp"
+- nombre = "Looney Tunes Sketch"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1049-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1049-ATRAS.webp"
+- nombre = "Mario Bross Battle"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1052-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1052-ATRAS.webp"
+- nombre = "Marvin Marciano"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1057-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1057-ATRAS.webp"
+- nombre = "Rick Weed"
+include ../products/product.pug
+
+//- - imagen2 = "img/products/camisetas-basicas/RZ1061-FRENTE.webp"
+//- - imagen1 = "img/products/camisetas-basicas/RZ1061-ATRAS.webp"
+//- - nombre = "Homero Police"
+//- include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1064-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1064-ATRAS.webp"
+- nombre = "Eartworm Jim"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1066-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1066-ATRAS.webp"
+- nombre = "Fear no One"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1077-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1077-ATRAS.webp"
+- nombre = "Oso AK-47"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1079-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1079-ATRAS.webp"
+- nombre = "Don't Panic"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1087-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1087-ATRAS.webp"
+- nombre = "Oso triste"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1088-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1088-ATRAS.webp"
+- nombre = "Bart AK-47"
+include ../products/product.pug
+
+- imagen2 = "img/products/camisetas-basicas/RZ1092-FRENTE.webp"
+- imagen1 = "img/products/camisetas-basicas/RZ1092-ATRAS.webp"
+- nombre = "Rick Calavera"
 include ../products/product.pug
