--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -4,27 +4,28 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        
         title Extrene
         //- meta(http-equiv="X-UA-Compatible" content="ie=edge")
         script(src="scripts-min.js" defer)
+        link(rel="icon" href="favicon.svg" type="image/svg+xml")
+
         //- ? STUB --- PRECARGAR FUENTES
-        //- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        //- <link rel="preload" href="MaterialIcons-Regular.ttf" as="font" type="font/otf" crossorigin>
-        meta(name="Extrene" content="Tienda de ropa")
+        <link rel="preload" href="text.ttf" as="font" type="font/otf" crossorigin>
+        <link rel="preload" href="title.ttf" as="font" type="font/otf" crossorigin>
         //- ? STUB --- AUTOR
+        meta(name="Extrene" content="Tienda de ropa")
+        <meta name="keywords" content="ropa, tienda de ropa, pago contra entrega, Sistecredito, envíos gratis, fabricantes, moda, hombre, mujer">
+        <link rel="social" href="https://www.facebook.com/OMOGROUP1980">
         meta(name="author" content="Ceo Alg")
         //- ? STUB --- INDEXAR LOS BUSCADORES | no es necesario si esta en index
         meta(name="robots" content="index, follow")
         //- ? STUB --- CSP
         //- <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://www.google.com/;font-src https:; style-src 'unsafe-insection'; style-src-elem  https:; script-src 'self' ">
-        //- ? STUB --- FAVICON | 64 x 64 recomendado
-        //- link(rel="shortcut icon" href="./favicon.svg" type="image/x-icon")
-        //- link(rel="icon" href="favicon.svg" type="image/x-icon")
-        //- ? STUB ---: ICONOS DE GOOGLE
-        //- link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Round")
-        //- link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons")
-        //- link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+outlined+Two+Tone")
-        //- link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+outlined+Sharp")
+        link(rel="icon" href="favicon.svg" type="image/svg+xml")
+        <meta name="description" content="Bienvenido a nuestra tienda de ropa. Encuentra las últimas tendencias en moda para hombres y mujeres. Ofrecemos una amplia selección de prendas de alta calidad.">
+
+
         block head
 
 
