--- a/src/pug/blocks/navbar-header.pug
+++ b/src/pug/blocks/navbar-header.pug
@@ -13,5 +13,6 @@
             a(href="/" class="navbar__link animated-border" id="inicio" ) Inicio
             //- a(href="/catalogo.html" class="navbar__link animated-border" id="catalogo") Catalogo
             a(href="/tiendas.html" class="navbar__link animated-border" id="tiendas") Tiendas
+            //- a(class="mybtn mybtn--sm"  href="") Comprar
 
             //- a(href="" class="navbar__link animated-border " ) WhatsApp
