--- a/src/pug/products/product.pug
+++ b/src/pug/products/product.pug
@@ -2,9 +2,9 @@
     .swiper.product-slider
         a(class="product-slider__slides swiper-wrapper" href=`${whatsapp} Me interesa la camiseta ${nombre} extreneonline.com/${imagen1}` target="blank" alt="enlace de whatsapp")
             .product-slider__slide.swiper-slide
-                img(class="product-slider__img" src=imagen1 alt="foto de la prenda")
+                img(class="product-slider__img" src=imagen1 alt="foto de la prenda" loading="lazy")
             .product-slider__slide.swiper-slide
-                img(class="product-slider__img" src=imagen2 alt="foto de la prenda")
+                img(class="product-slider__img" src=imagen2 alt="foto de la prenda" loading="lazy")
         .product-slider__btns
             .product-slider-btn-next.swiper-button-next
                 <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960"><path d="m309.346-98.232-44.96-45.191L603.27-481.615l-338.884-338.5 44.96-44.884L692.73-481.615 309.346-98.232Z"/></svg>
