--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -11,7 +11,7 @@ html(lang="es")
         link(rel="icon" href="favicon.svg" type="image/svg+xml")
 
         //- ? STUB --- PRECARGAR FUENTES
-        <link rel="preload" href="text.ttf" as="font" type="font/otf" crossorigin>
+        //- <link rel="preload" href="text.ttf" as="font" type="font/otf" crossorigin>
         <link rel="preload" href="title.ttf" as="font" type="font/otf" crossorigin>
         //- ? STUB --- AUTOR
         meta(name="Extrene" content="Tienda de ropa")
