--- a/public/style-guide.css
+++ b/public/style-guide.css
@@ -229,7 +229,7 @@ img {
 .mybtn {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: var(--border-radius);
-  font-family: "button", "p", arial;
+  font-family: "p" Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   padding: 10px 24px;
@@ -288,6 +288,23 @@ img {
 .mybtn--disabled {
   opacity: 0.2;
   pointer-events: none;
+}
+
+.mybtn--header {
+  font-size: 24px;
+  padding: 14px 0;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  min-width: 277.8px;
+  font-weight: 200;
+  text-align: center;
+  border: 1px solid black;
+  color: black;
+  background-color: #fff;
+}
+.mybtn--header:hover {
+  color: #fff;
+  background-color: var(--color-primary-700);
 }
 
 @font-face {
@@ -488,7 +505,7 @@ html body {
   max-width: var(--width-100vw);
   max-width: 100vw;
   color: var(--color-text);
-  font-family: "p";
+  font-family: "p", Arial, Helvetica, sans-serif;
   font-size: 1rem;
   position: relative;
 }
@@ -691,7 +708,7 @@ img {
 .footer .container-footer {
   height: 100%;
   width: 100%;
-  gap: var(--space-7);
+  gap: var(--space-9);
 }
 .footer .container-footer .footer__logo {
   width: 40rem;
@@ -709,7 +726,7 @@ img {
   gap: var(--space-1);
 }
 .footer .container-footer .footer__social-networks .footer__social-network svg {
-  height: 32px;
+  height: 28px;
   width: auto;
 }
 .footer .container-footer .footer__social-networks .footer__social-network span {
