--- a/public/tiendas.css
+++ b/public/tiendas.css
@@ -229,7 +229,7 @@ img {
 .mybtn {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: var(--border-radius);
-  font-family: "button", "p", arial;
+  font-family: "p" Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   padding: 10px 24px;
@@ -288,6 +288,23 @@ img {
 .mybtn--disabled {
   opacity: 0.2;
   pointer-events: none;
+}
+
+.mybtn--header {
+  font-size: 24px;
+  padding: 14px 0;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  min-width: 277.8px;
+  font-weight: 200;
+  text-align: center;
+  border: 1px solid black;
+  color: black;
+  background-color: #fff;
+}
+.mybtn--header:hover {
+  color: #fff;
+  background-color: var(--color-primary-700);
 }
 
 @font-face {
@@ -460,13 +477,13 @@ h4 {
   bottom: 0;
 }
 
- body .main .stores .store .store__text, body .main .stores .store, body .main .stores, body .main .section-1__text, body .main .section-1, body .header .header__text, body .header, .navbar__hamburguer, .footer .container-footer .footer__social-networks .footer__social-network, .footer .container-footer .footer__social-networks, .footer .container-footer, .navbar-header .navbar-header__second .navbar__links {
+ body .main .stores .store .store__text, body .main .stores .store, body .main .stores, body .main .slider-1__text, body .main .slider-1, body .header .header__text, body .header, .navbar__hamburguer, .footer .container-footer .footer__social-networks .footer__social-network, .footer .container-footer .footer__social-networks, .footer .container-footer, .navbar-header .navbar-header__second .navbar__links {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
- body .main .stores .store, body .main .section-1__text, body .header .header__text, .footer .container-footer, .navbar-header .navbar-header__second .navbar__links {
+ body .main .stores .store, body .main .slider-1__text, body .header .header__text, .footer .container-footer, .navbar-header .navbar-header__second .navbar__links {
   display: flex;
   flex-direction: column;
 }
@@ -497,7 +514,7 @@ html body {
   max-width: var(--width-100vw);
   max-width: 100vw;
   color: var(--color-text);
-  font-family: "p";
+  font-family: "p", Arial, Helvetica, sans-serif;
   font-size: 1rem;
   position: relative;
 }
@@ -700,7 +717,7 @@ img {
 .footer .container-footer {
   height: 100%;
   width: 100%;
-  gap: var(--space-7);
+  gap: var(--space-9);
 }
 .footer .container-footer .footer__logo {
   width: 40rem;
@@ -718,7 +735,7 @@ img {
   gap: var(--space-1);
 }
 .footer .container-footer .footer__social-networks .footer__social-network svg {
-  height: 32px;
+  height: 28px;
   width: auto;
 }
 .footer .container-footer .footer__social-networks .footer__social-network span {
@@ -850,20 +867,26 @@ body .header .header__img img {
      object-fit: cover;
 }
 body .header .header__text {
-  gap: var(--space-3);
-  background-color: rgba(255, 255, 255, 0.7);
+  z-index: 20;
+  background-color: rgba(255, 255, 255, 0.8);
   overflow: hidden;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   font-weight: 200;
-  gap: var(--space-3);
+  gap: var(--space-1);
 }
-body .header .header__text h2 {
+body .header .header__text .video-header__tittle {
+  font-weight: 200;
+  margin-top: var(--space-10);
   letter-spacing: 1px;
   line-height: 1.5;
-  font-size: 14px;
+  font-size: 16px;
   text-align: end;
 }
-body .main .section-1 {
+body .main .slider-1 {
   flex-direction: column;
   width: 100%;
   padding-left: var(--space-5);
@@ -875,22 +898,22 @@ body .main .section-1 {
   margin-left: auto;
 }
 @media screen and (min-width: 1014px) {
-  body .main .section-1 {
+  body .main .slider-1 {
     flex-direction: row;
     max-width: 1200px;
     height: 500px;
   }
 }
-body .main .section-1 h1 {
+body .main .slider-1 h1 {
   padding: var(--space-3);
   flex: 1;
   font-size: 5rem;
 }
-body .main .section-1__text {
+body .main .slider-1__text {
   flex: 1;
   gap: var(--space-3);
 }
-body .main .section-1__text p {
+body .main .slider-1__text p {
   flex: 1;
 }
 body .main .stores {
