--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,7 +2,15 @@ extends ../templates/template.pug
 
 block head
     link(rel="stylesheet" type="text/css" href="./index.css")
-    link(rel="stylesheet" type="text/css" href="./swiper.css")
+
+    //- <link rel="preload" href="./index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    //- <noscript><link rel="stylesheet" href="./index.css"></noscript>
+
+    <link rel="preload" href="./swiper.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="./swiper.css"></noscript>
+
+
+    //- link(rel="stylesheet" type="text/css" href="./swiper.css")
     script(src="swiper.js" defer)
     script(src="index.js" defer)
 
@@ -12,105 +20,91 @@ block header
             <source media="(orientation: landscape)" srcset="/video-landscape.webp">
             img(class="video-header__img" src="/video-portrait.webp" alt="foto de modelo")
         </picture>
-        video(class="video-header___video video-header__video--portrait" autoplay loop muted playsinline)
-            source(src="video-header-portrait.webm" type="video/webm")
-        video(class="video-header___video video-header__video--landscape" autoplay loop muted playsinline)
-            source(src="video-header-landscape.webm" type="video/webm")
+        .video-header__container-video
+            //- video(class="video-header___video video-header__video--portrait"  autoplay loop muted playsinline)
+            //-     <source  src="video-header-portrait.webm" type="video/mp4">
+            //- video(class="video-header___video video-header__video--landscape"  autoplay loop muted playsinline)
+            //-     <source  src="video-header-landscape.webm" type="video/mp4">
+
+            //- video(class="video-header___video video-header__video--portrait" preload="none" autoplay loop muted playsinline)
+            //- video(class="video-header___video video-header__video--landscape" preload="none" autoplay loop muted playsinline)
         .video-header__text
             .video-header__content-text
                 h2.h4.video-header__tittle Más de 60 años fabricando estilo
-                a(href=`${whatsapp} Quiero que me atienda alguien` target="blank" class="mybtn") Quiero que me atienda alguien
-    //- .video-header
-    //-     <video class="video-header__video--portrait"autoplay loop muted >
-    //-         <source  src="video-header-portrait.webm" type="video/mp4">
-    //-     </video>
-    //-     <video class="video-header__video--landscape" autoplay loop muted >
-    //-         <source  src="video-header-landscape.webm" type="video/mp4">
-    //-     </video>
-
-    //-     .video-header__text
-    //-         .video-header__content-text
-    //-             h2.h4.video-header__tittle Más de 60 años fabricando estilo
-    //-             a(href=`${whatsapp} Quiero que me atienda alguien` target="blank" class="mybtn") Quiero que me atienda alguien
+                a(class="mybtn mybtn--header" href=`${whatsapp} Quiero que me atienda alguien` target="blank" ) Comprar
 block main 
-    section.section-top.section-2.container-lg
-        .about__logo
-            include ../blocks/logo
-        p.p Desde 1980, somos líderes en la industria de la moda en Colombia. Con tres tiendas estratégicamente ubicadas, fusionamos estilo, calidad y comodidad en cada prenda. Nuestro compromiso con la excelencia y la satisfacción del cliente nos ha convertido en un referente confiable en el mundo de la moda local.
-    section.section-top.section-1
-        .swiper.mySwiper
-            .swiper-wrapper
-                .swiper-slide
-                    <picture class="mySlider__picture">
-                        <source media="(orientation: landscape)" srcset="./img/oversize-landscape.webp" >
-                        img(class="mySwiper__img" src="./img/oversize-portrait.webp"  alt="camiseta oversize")
-                    </picture>
-                    .mySwiper__text
-                        h2.h2.mySwiper__title Camisetas Oversize Estampadas
-                        p.p Camisetas 100% algodón con estampados en serigrafia
-                        a(class="mybtn" href=`${whatsapp} Me interesa oversize estampadas` target="blank") Ver más
-                .swiper-slide
-                    <picture class="mySlider__picture">
-                        <source media="(orientation: landscape)" srcset="./img/buzo-landscape.webp">
-                        img(class="mySwiper__img" src="./img/buzo-portrait.webp" alt="buzo estampado")
-                    </picture>
-                    .mySwiper__text 
-                        h2.h2.mySwiper__title Busos Estampados
-                        p.p Buzos 100% algodón con estampados en serigrafia
-                        a(class="mybtn" href=`${whatsapp} Me interesa buzos estampados` target="blank") Ver más
-            .mySwiper__buttons
-                .swiper-button-next.mybtn
-                    span Siguiente
-                    <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path d="m309.346-98.232-44.96-45.191L603.27-481.615l-338.884-338.5 44.96-44.884L692.73-481.615 309.346-98.232Z"/></svg>
-                .swiper-button-prev.mybtn
-                    <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path d="M399.077-96.616 15.693-480l383.384-383.384 44.961 44.884L105.153-480l338.885 337.807-44.961 45.577Z"/></svg>
     section.section-new
         h2.h1.new__h1 Nueva Colección
         .products
-            
             include ../products/product-1.pug
-            //- include ../products/product-2.pug
-            //- include ../products/product-3.pug
-            //- include ../products/product.pug
-            //- include ../products/product.pug
-            //- include ../products/product.pug
+    //- section.slider-1
+    //-     .swiper.mySwiper
+    //-         .swiper-wrapper
+    //-             .swiper-slide
+    //-                 <picture class="mySlider__picture">
+    //-                     <source media="(orientation: landscape)" srcset="./img/oversize-landscape.webp" >
+    //-                     img(class="mySwiper__img" src="./img/oversize-portrait.webp" alt="camiseta oversize" loading="lazy")
+    //-                 </picture>
+    //-                 .mySwiper__text
+    //-                     h2.h2.mySwiper__title Camisetas Oversize Estampadas
+    //-                     p.p Camisetas 100% algodón con estampados en serigrafia
+    //-                     a(class="mybtn" href=`${whatsapp} Me interesa oversize estampadas` target="blank") Ver más
+    //-             .swiper-slide
+    //-                 <picture class="mySlider__picture">
+    //-                     <source media="(orientation: landscape)" srcset="./img/buzo-landscape.webp">
+    //-                     img(class="mySwiper__img" src="./img/buzo-portrait.webp" alt="buzo estampado" loading="lazy")
+    //-                 </picture>
+    //-                 .mySwiper__text 
+    //-                     h2.h2.mySwiper__title Busos Estampados
+    //-                     p.p Buzos 100% algodón con estampados en serigrafia
+    //-                     a(class="mybtn" href=`${whatsapp} Me interesa buzos estampados` target="blank") Ver más
+    //-         .mySwiper__buttons
+    //-             .swiper-button-next.mybtn
+    //-                 span Siguiente
+    //-                 <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path d="m309.346-98.232-44.96-45.191L603.27-481.615l-338.884-338.5 44.96-44.884L692.73-481.615 309.346-98.232Z"/></svg>
+    //-             .swiper-button-prev.mybtn
+    //-                 <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path d="M399.077-96.616 15.693-480l383.384-383.384 44.961 44.884L105.153-480l338.885 337.807-44.961 45.577Z"/></svg>
 
-    section.section-4
+    //- section.section-about.container-lg
+    //-     .about__logo
+    //-         include ../blocks/logo
+    //-     p.p Desde 1980, somos líderes en la industria de la moda en Colombia. Con tres tiendas estratégicamente ubicadas, fusionamos estilo, calidad y comodidad en cada prenda. Nuestro compromiso con la excelencia y la satisfacción del cliente nos ha convertido en un referente confiable en el mundo de la moda local.
+
+    section.slider-2
         .swiper.slider-hook
             .swiper-wrapper
                 .swiper-slide
                     <picture class="mySlider__picture">
                         <source media="(orientation: landscape)" srcset="./img/01-landscape.webp">
-                        img(class="slider-hook__img" src="./img/01-portrait.webp" alt="foto de modelo")
+                        img(class="slider-hook__img" src="./img/01-portrait.webp" alt="foto de modelo" loading="lazy")
                     </picture>
                 .swiper-slide
                     <picture class="mySlider__picture">
                         <source media="(orientation: landscape)" srcset="./img/02-landscape.webp">
-                        img(class="slider-hook__img" src="./img/02-portrait.webp" alt="foto de modelo")
+                        img(class="slider-hook__img" src="./img/02-portrait.webp" alt="foto de modelo" loading="lazy")
                     </picture>
                 .swiper-slide
                     <picture class="mySlider__picture">
                         <source media="(orientation: landscape)" srcset="./img/03-landscape.webp">
-                        img(class="slider-hook__img" src="./img/03-portrait.webp" alt="foto de modelo")
+                        img(class="slider-hook__img" src="./img/03-portrait.webp" alt="foto de modelo" loading="lazy")
                     </picture>
-            //- .swiper-pagination
 
-    section.section-3
+    section.section-payment
         h2.h1.payment__h1 Facil y con confianza
         .cards
             .card 
                 <svg class="card__icon" xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960" ><path d="M222.873-180.77q-45.046 0-77.248-32.249-32.202-32.248-32.202-77.905H57.116v-430.21q0-22.632 16.63-39.363 16.63-16.732 39.524-16.732h555.845v156.153h93.461l141 188.308v141.844h-64.692q0 45.657-32.553 77.905-32.553 32.249-77.919 32.249-45.207 0-77.328-32.249-32.122-32.248-32.122-77.905H333.346q0 45.808-32.714 77.981-32.713 32.173-77.759 32.173Zm.165-43.846q27.424 0 46.943-19.173t19.519-46.942q0-27.77-19.467-46.943-19.468-19.173-46.649-19.173-27.769 0-46.942 19.173-19.173 19.173-19.173 46.943 0 27.769 19.173 46.942 19.173 19.173 46.596 19.173ZM100.961-334.769h21.135q12.134-28.654 39.579-47.443Q189.12-401 222.535-401q32.645 0 60.228 18.808t40.737 47.423h301.77v-398.615h-512q-4.808 0-8.558 3.846-3.751 3.847-3.751 8.462v386.307Zm627.616 110.153q27.423 0 46.943-19.173 19.519-19.173 19.519-46.942 0-27.77-19.467-46.943-19.468-19.173-46.649-19.173-27.769 0-46.943 19.173-19.173 19.173-19.173 46.943 0 27.769 19.173 46.942 19.174 19.173 46.597 19.173Zm-59.462-193.999h190.692L739.538-577.231h-70.423v158.616ZM363.423-526.461Z"/></svg>
-                h3.h3 Envío gratis
+                h3.h4 Envío gratis
                 p.p Hacemos envío a todo el pais
                 a(class="card__btn mybtn mybtn--outlined" href=`${whatsapp} Me interesa saber sobre el envío gratis` target="blank") Más información
             .card.card--contra-entrega
                 <svg class="card__icon" xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960" ><path d="M457.464-204.462H500v-49.662q54.118-3.913 90.29-32.784 36.171-28.87 36.171-81.515 0-48.438-27.95-78.199-27.95-29.761-98.05-57.685-61.846-24.385-84.462-43-22.615-18.616-22.615-51.385 0-31.769 24.231-51.846 24.231-20.078 64.45-20.078 29.56 0 51.639 13.356 22.079 13.355 37.681 39.26l36.384-17.419q-17.5-32.004-44.423-49.754-26.924-17.75-61.346-20.963v-48.786h-42.615v48.769q-51.462 6.692-79.846 36.438-28.385 29.746-28.385 71.065 0 46.535 28.731 73.592Q408.616-498 471.066-473q66.358 27.231 89.954 48.653 23.596 21.422 23.596 55.885 0 37.001-29.443 57.039-29.442 20.039-68.558 20.039-37.346 0-67.856-21.077-30.51-21.077-44.913-58l-38.615 13.692q21.232 42.581 50.901 66.043 29.669 23.462 71.332 34.354v51.91Zm22.625 101.384q-77.534 0-146.233-29.867-68.699-29.866-119.931-81.153-51.232-51.287-81.039-119.824-29.808-68.537-29.808-145.989 0-78.149 29.867-147.041 29.866-68.891 81.153-119.873 51.287-50.982 119.824-80.539 68.537-29.558 145.989-29.558 78.149 0 147.047 29.735 68.897 29.735 119.873 80.654 50.976 50.918 80.533 119.648 29.558 68.729 29.558 146.796 0 77.534-29.617 146.233-29.616 68.699-80.653 119.931-51.037 51.232-119.767 81.039-68.729 29.808-146.796 29.808Zm-.135-43.845q138.623 0 235.873-97.512t97.25-235.519q0-138.623-97.205-235.873-97.204-97.25-235.826-97.25-138.007 0-235.565 97.205-97.558 97.204-97.558 235.826 0 138.007 97.512 235.565 97.512 97.558 235.519 97.558ZM480-480Z"/></svg>
-                h3.h3 Pago contra entrega
+                h3.h4 Pago contra entrega
                 p.p Puedes pagar cuando recibas
                 a(class="card__btn mybtn mybtn--outlined" href=`${whatsapp} Me interesa sobre el pago contra entrega` target="blank") Más información
             .card 
                 <svg class="card__icon" xmlns="http://www.w3.org/2000/svg"  viewBox="0 -960 960 960" ><path d="M856.922-721.152v482.304q0 22.614-16.732 39.345-16.732 16.732-39.338 16.732H159.148q-22.606 0-39.338-16.732-16.732-16.731-16.732-39.345v-482.304q0-22.614 16.732-39.345 16.732-16.732 39.338-16.732h641.704q22.606 0 39.338 16.732 16.732 16.731 16.732 39.345ZM146.923-615.614h666.154v-105.462q0-4.615-3.847-8.462-3.846-3.846-8.462-3.846H159.232q-4.616 0-8.462 3.846-3.847 3.847-3.847 8.462v105.462Zm0 102.306v274.384q0 4.615 3.847 8.462 3.846 3.846 8.462 3.846h641.536q4.616 0 8.462-3.846 3.847-3.847 3.847-8.462v-274.384H146.923Zm0 286.692v-506.768 506.768Z"/></svg>
-                h3.h3 Sistecredito
+                h3.h4 Sistecredito
                 p.p Extrena ahora y paga después
                 a(class="card__btn mybtn mybtn--outlined" href=`${whatsapp} Me interesa sobre` target="blank") Más información
         p.payment__p En 
