--- a/src/scss/scss omnibus/bases/_general-styles.scss
+++ b/src/scss/scss omnibus/bases/_general-styles.scss
@@ -28,7 +28,7 @@ html {
 		max-width: var(--width-100vw);
 		max-width: 100vw;
 		color: var(--color-text);
-		font-family: "p";
+		font-family:  'p',Arial, Helvetica, sans-serif;
 		font-size: 1rem;
 		// height: 100%;
 		position: relative;
@@ -50,7 +50,7 @@ input[type="search"] {
 	&::-webkit-search-cancel-button {
 		display: none;
 	}
-}
+}	
 
 p {
 	line-height: 1.5;
