--- a/src/scss/scss pages/index.scss
+++ b/src/scss/scss pages/index.scss
@@ -12,7 +12,7 @@ body {
       height: 100%;
       width: 100%;
       position: relative;
-      .video-header__img{
+      .video-header__img {
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -39,25 +39,24 @@ body {
       }
       .video-header__text {
         @extend .position-absolute, .flex-center, .flex-column;
-        gap: var(--space-9);
         z-index: $z-index-2;
-        padding: var(--space-5); 
-        background-color: rgba(255, 255, 255, 0.7);
+        background-color: rgba(255, 255, 255, .8);
 
         .video-header__content-text {
-          margin-top: auto;
-          margin-bottom: 25vh;
           overflow: hidden;
           width: 100%;
           display: flex;
           flex-direction: column;
           align-items: center;
+          justify-content: center;
           font-weight: 200;
-          gap: var(--space-3);
+          gap: var(--space-1);
           .video-header__tittle {
+            font-weight: 200;
+            margin-top: var(--space-10);
             letter-spacing: 1px;
             line-height: 1.5;
-            font-size: 14px;
+            font-size: 16px;
             text-align: end;
           }
         }
@@ -68,12 +67,23 @@ body {
   .main {
     section {
       width: 100%;
+      margin-top: var(--space-10);
+      margin-bottom: var(--space-10);
+      padding-left: var(--space-1);
+      padding-right: var(--space-1);
+    }
+    .section-new {
+      width: 100%;
+      .new__h1{
+        padding-top: var(--space-9);
+        margin-bottom: var(--space-9);
+      }
     }
 
-    .section-1 {
+    .slider-1 {
       width: 100%;
       height: 100vh;
-      padding-bottom: var(--space-10);
+      padding: 0;
 
       .mySwiper {
         height: 100%;
@@ -151,16 +161,28 @@ body {
         }
       }
     }
-
-    .section-2 {
+    .slider-2 {
+      padding: 0;
+      .slider-hook {
+        .swiper-slide {
+          overflow: hidden;
+          img {
+            transition: transform 0.3s ease;
+            &:hover {
+              transform: scale(1.05);
+            }
+          }
+        }
+      }
+    }
+    .section-about {
       background-color: var(--color-background-primary);
       height: min-content;
-      padding-top: var(--space-15);
-      padding-bottom: var(--space-15);
       gap: var(--space-5);
 
       @extend .flex-center, .flex-column;
       .about__logo {
+        // max-width: 70vw;
         svg {
           height: 10rem;
           width: auto;
@@ -168,14 +190,12 @@ body {
         }
       }
     }
-    .section-3 {
+    .section-payment {
       @extend .flex-center, .flex-column;
       text-align: center;
-      padding-left: var(--space-5);
-      padding-right: var(--space-5);
-      padding-bottom: var(--space-15);
+      overflow: hidden;
       .payment__h1 {
-        margin-top: var(--space-10);
+        // margin-top: var(--space-10);
       }
       .cards {
         margin-top: var(--space-9);
@@ -183,8 +203,9 @@ body {
         @extend .flex-center;
         gap: var(--space-7);
         flex-wrap: wrap;
+        padding-left: var(--space-7);
+        padding-right: var(--space-7);   
         .card {
-          min-width: max-content;
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -194,6 +215,7 @@ body {
           padding: var(--space-5);
           width: 100%;
           @include tablet-landscape {
+            min-width: max-content;
             flex: 1;
             width: 260px;
           }
@@ -229,28 +251,8 @@ body {
     }
   }
 }
-.section-new {
-  width: 100%;
-  padding-left: var(--space-1);
-  padding-right: var(--space-1);
-  padding-top: var(--space-10);
-  padding-bottom: var(--space-15);
 
-}
-.section-4 {
-  padding-bottom: var(--space-10);
-  .slider-hook {
-    .swiper-slide {
-      overflow: hidden;
-      img {
-        transition: transform 0.3s ease;
-        &:hover {
-          transform: scale(1.05);
-        }
-      }
-    }
-  }
-}
+
 .swiper-button-next,
 .swiper-button-prev {
   &::after {
