--- a/src/scss/scss pages/tiendas.scss
+++ b/src/scss/scss pages/tiendas.scss
@@ -5,109 +5,115 @@ body {
     height: 100vh;
     width: 100%;
     position: relative;
-    .header__img{
+    .header__img {
+      height: 100%;
+      width: 100%;
+      img {
         height: 100%;
         width: 100%;
-        img{
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-        }
+        object-fit: cover;
+      }
     }
     .header__text {
       @extend .position-absolute, .flex-center, .flex-column;
-      gap: var(--space-3);
-      background-color: rgba(255, 255, 255, 0.7);
+      z-index: $z-index-2;
+      background-color: rgba(255, 255, 255, 0.8);
       overflow: hidden;
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       font-weight: 200;
-      gap: var(--space-3);
+      gap: var(--space-1);
 
-      h2{
+      .video-header__tittle {
+        font-weight: 200;
+        margin-top: var(--space-10);
         letter-spacing: 1px;
         line-height: 1.5;
-        font-size: 14px;
+        font-size: 16px;
         text-align: end;
       }
     }
   }
-  .main{
-    .section-1{
-        @extend .flex-center;
-        flex-direction: column;
-        width: 100%;
-        padding-left: var(--space-5);
-        padding-right: var(--space-5);
-        padding-top: var(--space-10);
-        padding-bottom: var(--space-10);
-        gap: var(--space-5);
-        margin-right: auto;
-        margin-left: auto;
-        
-        @include tablet-landscape{
-            flex-direction: row;
-            max-width: 1200px;
-            height: 500px;
-        }
-        h1{
-            padding: var(--space-3);
-            flex: 1;
-            font-size: 5rem;
-            // border: 1px solid rgb(0, 0, 0);
-        }
-        &__text{
-            @extend .flex-center, .flex-column;
-            flex: 1;
-            gap: var(--space-3);
-            p{
-                flex: 1;
-            }
-        }
-    }
-    .stores{
-        @extend .flex-center;
-        width: 100%;
-        gap: var(--space-7);
-        padding: var(--space-7) var(--space-3);
-        padding-top: 0;
-        max-width: 1200px;
-        margin-right: auto;
-        margin-left: auto;
-        margin-bottom: 10rem;
-        flex-direction: column;
-        @include landscape {
-            flex-direction: row
-        }
+  .main {
+    .slider-1 {
+      @extend .flex-center;
+      flex-direction: column;
+      width: 100%;
+      padding-left: var(--space-5);
+      padding-right: var(--space-5);
+      padding-top: var(--space-10);
+      padding-bottom: var(--space-10);
+      gap: var(--space-5);
+      margin-right: auto;
+      margin-left: auto;
 
-        .store{
-            @extend .flex-center, .flex-column;
-            flex: 1;
-            width: 100%;
-            height: 100;;
-            overflow: hidden;
-            gap: var(--space-5);
-            .store__map{
-                border: 1px solid black;
-                flex: 3;
-                width: 100%;
-                overflow: hidden;
-                iframe{
-                    height: 300px;
-                    width: 100%;
-                    @include landscape {
-                        height: 500px;
-                    }
-                }
-            }
-            .store__text{
-                @extend .flex-center;
-                flex-wrap: wrap;
-                height: 100%;
-                flex: 1;
-                width: 100%;
-                gap: var(--space-3);
-            }
+      @include tablet-landscape {
+        flex-direction: row;
+        max-width: 1200px;
+        height: 500px;
+      }
+      h1 {
+        padding: var(--space-3);
+        flex: 1;
+        font-size: 5rem;
+        // border: 1px solid rgb(0, 0, 0);
+      }
+      &__text {
+        @extend .flex-center, .flex-column;
+        flex: 1;
+        gap: var(--space-3);
+        p {
+          flex: 1;
         }
+      }
+    }
+    .stores {
+      @extend .flex-center;
+      width: 100%;
+      gap: var(--space-7);
+      padding: var(--space-7) var(--space-3);
+      padding-top: 0;
+      max-width: 1200px;
+      margin-right: auto;
+      margin-left: auto;
+      margin-bottom: 10rem;
+      flex-direction: column;
+      @include landscape {
+        flex-direction: row;
+      }
+
+      .store {
+        @extend .flex-center, .flex-column;
+        flex: 1;
+        width: 100%;
+        height: 100;
+        overflow: hidden;
+        gap: var(--space-5);
+        .store__map {
+          border: 1px solid black;
+          flex: 3;
+          width: 100%;
+          overflow: hidden;
+          iframe {
+            height: 300px;
+            width: 100%;
+            @include landscape {
+              height: 500px;
+            }
+          }
+        }
+        .store__text {
+          @extend .flex-center;
+          flex-wrap: wrap;
+          height: 100%;
+          flex: 1;
+          width: 100%;
+          gap: var(--space-3);
+        }
+      }
     }
   }
 }
